--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
-# .NET Core
-backend/bin/
-backend/obj/
-backend/*.user
-backend/*.suo
-backend/.vs/
+# ==========================
+# .NET Core backend
+# ==========================
+backend/**/bin/
+backend/**/obj/
+backend/**/.vs/
+backend/**/*.user
+backend/**/*.suo
+backend/**/*.cache
+backend/**/*.db
 
-# Angular / Node
+# ==========================
+# Angular frontend
+# ==========================
 frontend/node_modules/
 frontend/dist/
 frontend/.angular/
-frontend/*.env
+frontend/**/*.env
 
+# ==========================
 # General
+# ==========================
 *.log
+*.tmp
