--- a/backend/SmartBiz.Application/SmartBiz.Application.csproj
+++ b/backend/SmartBiz.Application/SmartBiz.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartBiz.Core\SmartBiz.Core.csproj" />
+  </ItemGroup>
+
 </Project>
