--- a/backend/SmartBiz.API/SmartBiz.API.csproj
+++ b/backend/SmartBiz.API/SmartBiz.API.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartBiz.Application\SmartBiz.Application.csproj" />
+    <ProjectReference Include="..\SmartBiz.Infrastructure\SmartBiz.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
