--- a/backend/SmartBiz.API/appsettings.json
+++ b/backend/SmartBiz.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SmartBiz;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  "Jwt": {
+    "Key": "SuperSecretSecureKeyForSmartBiz_ReplaceThis",
+    "Issuer": "SmartBizAPI",
+    "Audience": "SmartBizClient",
+    "ExpiresInMinutes": 60
+  }
 }
